--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ section.container {min-height:963px}
 .topnav li a {color:white;text-decoration:none}
 a.icon {display:none}
 
-.sec1 {background: url("img/scott-goodwill.jpg") 50% 50%;}
+.sec1 {background: url("./fotky/bg1.jpg") 50% 50%;}
 .container-text {width:340px;text-align:right;bottom:11vh;right:10vw;position:absolute;}
 
 h1 {font-size:76px;color: white}
