--- a/style.css
+++ b/style.css
@@ -1,20 +1,47 @@
-body {font-size: 15px;font-family: Roboto}
-.container {width:1440px;margin:0 auto;position:relative;border:1px solid red;} /* */
-section.container {min-height:963px} 
-.topnav {display:flex;min-height:30px;background:#33292a;justify-content:center}
-.topnav li {list-style-type: none;font-size:30px;border-right:1px solid blue;padding:0 5px}
-.topnav li a:hover {color: lightblue}
+body {font-size: 15px;
+  font-family: Roboto;
+  padding: 0px;
+  margin:0px
+}
+.container {
+  width:100%;
+  margin:0 auto;
+  position:relative;
+  border:0px solid rgb(0, 0, 0);
+}
+section.container {min-height:963px}
+.topnav {
+  display:flex;
+  min-height:30px;
+  background:#33292a;
+  justify-content:space-evenly;
+  padding: 20px;
+
+  }
+
+.topnav li {
+  list-style-type: none;
+  font-size:25px;
+  border-right:0px solid blue;
+  padding:0 5px;
+}
+
+.topnav li a:hover {
+  color: lightblue;
+}
 .topnav li a {color:white;text-decoration:none}
 a.icon {display:none}
 
-.sec1 {background: url("./fotky/bg1.jpg") 50% 50%;}
+.sec1 {background: url("./fotky/bg1.jpg") 50% 50%;
+    background-repeat: no-repeat;
+}
 .container-text {width:340px;text-align:right;bottom:11vh;right:10vw;position:absolute;}
 
 h1 {font-size:76px;color: white}
 
 @media screen and (width <= 768px) { /* w:390px */
   .container {width:100%}
-  
+ 
   .topnav {
   /*display: none;*/
     }
@@ -24,10 +51,35 @@ h1 {font-size:76px;color: white}
 
 @media screen and (width <= 992px) { /* w:390px */
   .container {width:100%}
-  
+ 
   .topnav {
   /*display: none;*/
     }
 
     a.icon {display:block}
+}
+.about-container{
+  display: flex;
+ 
+  gap:40px;
+  align-items: center;
+  max-width: 1200px;
+margin: 40px auto;
+}
+.about-left {
+flex:1;
+font-family: Arial,
+sans-serif;
+line-height: 1.6;
+
+}
+
+
+
+img{
+   
+    width: 100%;
+     max-width: 500px;
+     border-radius: 8px;
+     object-fit:cover;
 }
