--- a/style.css
+++ b/style.css
@@ -73,6 +73,83 @@ h1 {font-size:76px;color: white}
   text-align: center;
 }
 
+.about-container{
+  display: flex;
+
+  gap:40px;
+  align-items: center;
+  max-width: 1200px;
+  margin: 40px auto;
+}
+.about-left {
+  flex:1;
+  font-family: Arial,
+  sans-serif;
+  line-height: 1.6;
+
+}
+
+
+
+img{
+  width: 100%;
+  max-width: 500px;
+  border-radius: 8px;
+  object-fit:cover;
+}
+
+
+.whatwedo {
+
+  margin: 60px auto;
+  padding: 0 20px;
+  text-align: center;
+  background-color: #33292a;
+  min-height: 500px;
+
+}
+
+.whatwedo h1 {
+  font-size: 2.5em;
+  margin-bottom: 20px;
+  padding: 30px 30px;
+}
+
+.description {
+  font-size: 1.1em;
+  line-height: 1.6;
+  margin-bottom: 40px;
+  color: #fff;
+  max-width: 800px;
+  margin-left: 33%;
+}
+
+.activities {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 120px;
+}
+
+.activity {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 120px;
+}
+
+.activity img {
+  width: 60px;
+  height: 60px;
+  margin-bottom: 10px;
+}
+
+.activity p {
+  font-size: 1em;
+  font-weight: bold;
+  color: #fff;
+}
+
 
 @media screen and (width <= 768px) { /* w:390px */
   .container {width:100%}
@@ -92,28 +169,4 @@ h1 {font-size:76px;color: white}
     }
 
     a.icon {display:block}
-}
-.about-container{
-  display: flex;
- 
-  gap:40px;
-  align-items: center;
-  max-width: 1200px;
-margin: 40px auto;
-}
-.about-left {
-flex:1;
-font-family: Arial,
-sans-serif;
-line-height: 1.6;
-
-}
-
-
-
-img{
-    width: 100%;
-     max-width: 500px;
-     border-radius: 8px;
-     object-fit:cover;
 }
