--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ section.container {min-height:963px}
   padding: 20px;
 
   }
+nav.container{background:#33292a;}
 
 .topnav li {
   list-style-type: none;
@@ -37,7 +38,7 @@ a.icon {display:none}
 }
 .container-text {width:340px;text-align:right;bottom:11vh;right:10vw;position:absolute;}
 
-h1 {font-size:76px;color: white}
+
 
 .photo-grid {
   display: grid;
@@ -113,6 +114,7 @@ img{
   font-size: 2.5em;
   margin-bottom: 20px;
   padding: 30px 30px;
+  color:white;
 }
 
 .description {
@@ -121,7 +123,7 @@ img{
   margin-bottom: 40px;
   color: #fff;
   max-width: 800px;
-  margin-left: 33%;
+  justify-self:center;
 }
 
 .activities {
@@ -153,20 +155,42 @@ img{
 
 @media screen and (width <= 768px) { /* w:390px */
   .container {width:100%}
- 
-  .topnav {
-  /*display: none;*/
-    }
 
-    a.icon {display:block}
+    .topnav {
+        display: none;
+        overflow: hidden;
+        background-color: #33292a;
+        position: relative;
+        flex-direction: column;
+    }
+        .topnav li {
+            padding: 10px;
+        }
+
+    a.icon {
+        display: block;
+        color: #d9d9d9;
+        justify-self: flex-end;
+    }
 }
 
 @media screen and (width <= 992px) { /* w:390px */
   .container {width:100%}
- 
-  .topnav {
-  /*display: none;*/
+
+    .topnav {
+        display: none;
+        overflow: hidden;
+        background-color: #33292a;
+        position: relative;
+        flex-direction: column;
+    }
+    .topnav li{
+        padding: 10px;
     }
 
-    a.icon {display:block}
+    a.icon {
+        display: block;
+        color: #d9d9d9;
+        justify-self: flex-end;
+    }
 }
