--- a/style.css
+++ b/style.css
@@ -353,18 +353,18 @@ p.start {
     .container {width:100%}
 
     .topnav {
-        /*display: none;*/
+        display: none;
     }
 
-    a.icon {display:block}
+    a.icon {display:block; justify-self: flex-end; color:white;}
 }
 
 @media screen and (width <= 992px) { /* w:390px */
     .container {width:100%}
 
     .topnav {
-        /*display: none;*/
+        display: none;
     }
 
-    a.icon {display:block}
+    a.icon {display:block; justify-self: flex-end; color:white;}
 }
